feat: update orientdb api
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>